- Operation core for exports initially with Ziping
- splitting TheBall namespace to accessable and system parts

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -61,6 +61,13 @@
       <Link>TheBallCore\TheBallCore.xml</Link>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="..\..\InformationAndProcessModels\TheBallIndex.xml">
+      <Link>TheBallCore\TheBallIndex.xml</Link>
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="..\..\InformationAndProcessModels\TheBallInfrastructure.xml">
+      <Link>TheBallCore\TheBallInfrastructure.xml</Link>
+    </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
     </Content>
