--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Apps\CaloomMVC\packages.config" />
+  <repository path="..\Apps\AzureSupport\packages.config" />
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
   <repository path="..\Apps\WebInterface\packages.config" />
-  <repository path="..\CaloomMvcWebRole\packages.config" />
-  <repository path="..\CaloomWorkerRole\packages.config" />
-  <repository path="..\TestAspNetWebRole1\packages.config" />
-  <repository path="..\WorkerRoleWithSBQueue1\packages.config" />
 </repositories>
