--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -113,6 +113,7 @@
     <Compile Include="..\..\Modules\TheBall.Interface\UpdateStatusSummaryImplementation.cs">
       <Link>TheBall.Interface\UpdateStatusSummaryImplementation.cs</Link>
     </Compile>
+    <Compile Include="AaltoGlobalImpact.OIP\PackageCategorizedContentToConnectionImplementation.cs" />
     <Compile Include="TheBall.CORE\PackageOwnerContentImplementation.cs" />
     <Compile Include="TheBall.CORE\ExportOwnerContentToZipImplementation.cs" />
     <Compile Include="Partials\EmbeddedContentCollection.cs" />
@@ -269,6 +270,7 @@
     <Compile Include="TheBall.CORE\SystemSupport.cs" />
     <Compile Include="TheBall.CORE\UsageMonitorItem.cs" />
     <Compile Include="TheBall.CORE\UsageSummary.cs" />
+    <Compile Include="TheBall.Interface\Category.cs" />
     <Compile Include="WebSupport.cs" />
     <Compile Include="WorkerSupport.cs" />
   </ItemGroup>
