--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -80,6 +80,9 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallCore.designer.cs">
       <Link>Abstractions\OperationAbstractionFromTheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallIndex.designer.cs">
+      <Link>TheBall.Index\OperationAbstractionFromTheBallIndex.designer.cs</Link>
+    </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallInfrastructure.designer.cs">
       <Link>TheBall.Infrastructure\OperationAbstractionFromTheBallInfrastructure.designer.cs</Link>
     </Compile>
@@ -104,20 +107,14 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallIndex.designer.cs">
+      <Link>TheBall.Index\TheBallIndex.designer.cs</Link>
+    </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallInfrastructure.designer.cs">
       <Link>TheBall.Infrastructure\TheBallInfrastructure.designer.cs</Link>
     </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallInterface.designer.cs">
       <Link>TheBall.Interface\TheBallInterface.designer.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Modules\TheBall.Interface\InformationChangeItem.cs">
-      <Link>TheBall.Interface\InformationChangeItem.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Modules\TheBall.Interface\StatusSummary.cs">
-      <Link>TheBall.Interface\StatusSummary.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Modules\TheBall.Interface\UpdateStatusSummaryImplementation.cs">
-      <Link>TheBall.Interface\UpdateStatusSummaryImplementation.cs</Link>
     </Compile>
     <Compile Include="AaltoGlobalImpact.OIP\PickCategorizedContentToConnectionImplementation.cs" />
     <Compile Include="TheBall.CORE\PackageOwnerContentImplementation.cs" />
@@ -276,11 +273,19 @@
     <Compile Include="TheBall.CORE\SystemSupport.cs" />
     <Compile Include="TheBall.CORE\UsageMonitorItem.cs" />
     <Compile Include="TheBall.CORE\UsageSummary.cs" />
+    <Compile Include="TheBall.Index\AttemptToBecomeInfrastructureIndexerImplementation.cs" />
+    <Compile Include="TheBall.Index\IndexInformationImplementation.cs" />
+    <Compile Include="TheBall.Index\IndexSupport.cs" />
+    <Compile Include="TheBall.Index\PerformUserQueryImplementation.cs" />
+    <Compile Include="TheBall.Index\QueryIndexedInformationImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\CloudDriveSupport.cs" />
     <Compile Include="TheBall.Infrastructure\CreateCloudDriveImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\SplittingStream.cs" />
     <Compile Include="TheBall.Interface\Category.cs" />
+    <Compile Include="TheBall.Interface\InformationChangeItem.cs" />
     <Compile Include="TheBall.Interface\PushCollaborationContentImplementation.cs" />
+    <Compile Include="TheBall.Interface\StatusSummary.cs" />
+    <Compile Include="TheBall.Interface\UpdateStatusSummaryImplementation.cs" />
     <Compile Include="WebSupport.cs" />
     <Compile Include="WorkerSupport.cs" />
   </ItemGroup>
