--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.CloudDrive, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -280,6 +281,7 @@
     <Compile Include="TheBall.Index\QueryIndexedInformationImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\CloudDriveSupport.cs" />
     <Compile Include="TheBall.Infrastructure\CreateCloudDriveImplementation.cs" />
+    <Compile Include="TheBall.Infrastructure\MountCloudDriveImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\SplittingStream.cs" />
     <Compile Include="TheBall.Interface\Category.cs" />
     <Compile Include="TheBall.Interface\InformationChangeItem.cs" />
