--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -279,6 +279,7 @@
     <Compile Include="TheBall.Index\IndexSupport.cs" />
     <Compile Include="TheBall.Index\PerformUserQueryImplementation.cs" />
     <Compile Include="TheBall.Index\QueryIndexedInformationImplementation.cs" />
+    <Compile Include="TheBall.Index\ReleaseIndexerResourcesImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\CloudDriveSupport.cs" />
     <Compile Include="TheBall.Infrastructure\CreateCloudDriveImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\MountCloudDriveImplementation.cs" />
