--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -278,6 +278,7 @@
     <Compile Include="TheBall.Index\IndexInformationImplementation.cs" />
     <Compile Include="TheBall.Index\IndexSupport.cs" />
     <Compile Include="TheBall.Index\PerformUserQueryImplementation.cs" />
+    <Compile Include="TheBall.Index\PrepareAndExecuteQueryImplementation.cs" />
     <Compile Include="TheBall.Index\QueryIndexedInformationImplementation.cs" />
     <Compile Include="TheBall.Index\ReleaseIndexerResourcesImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\CloudDriveSupport.cs" />
