--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -275,6 +275,7 @@
     <Compile Include="TheBall.CORE\UsageMonitorItem.cs" />
     <Compile Include="TheBall.CORE\UsageSummary.cs" />
     <Compile Include="TheBall.Index\AttemptToBecomeInfrastructureIndexerImplementation.cs" />
+    <Compile Include="TheBall.Index\FilterAndSubmitIndexingRequestsImplementation.cs" />
     <Compile Include="TheBall.Index\IndexInformationImplementation.cs" />
     <Compile Include="TheBall.Index\IndexSupport.cs" />
     <Compile Include="TheBall.Index\PerformUserQueryImplementation.cs" />
