--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Apps\AzureSupport\packages.config" />
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
+  <repository path="..\Apps\LuceneSupport\packages.config" />
   <repository path="..\Apps\WebInterface\packages.config" />
 </repositories>
