Operation hooks for updates of category sides

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -305,10 +305,12 @@
     <Compile Include="TheBall.Interface\Category.cs" />
     <Compile Include="TheBall.Interface\Connection.cs" />
     <Compile Include="TheBall.Interface\ConnectionCollection.cs" />
+    <Compile Include="TheBall.Interface\CreateReceivingConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\InformationChangeItem.cs" />
     <Compile Include="TheBall.Interface\InitiateIntegrationConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\PushCollaborationContentImplementation.cs" />
     <Compile Include="TheBall.Interface\StatusSummary.cs" />
+    <Compile Include="TheBall.Interface\UpdateConnectionOtherSideCategoriesImplementation.cs" />
     <Compile Include="TheBall.Interface\UpdateStatusSummaryImplementation.cs" />
     <Compile Include="WebSupport.cs" />
     <Compile Include="WorkerSupport.cs" />
