--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -92,7 +92,7 @@
       <Link>Abstractions\OperationAbstractionFromTheBallAdmin.designer.cs</Link>
     </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallCore.designer.cs">
-      <Link>Abstractions\OperationAbstractionFromTheBallCore.designer.cs</Link>
+      <Link>TheBall.CORE\OperationAbstractionFromTheBallCore.designer.cs</Link>
     </Compile>
     <Compile Include="..\..\Abstractions\AbstractionContent\Operation\Out\OperationAbstractionFromTheBallIndex.designer.cs">
       <Link>TheBall.Index\OperationAbstractionFromTheBallIndex.designer.cs</Link>
@@ -132,6 +132,7 @@
     </Compile>
     <Compile Include="AaltoGlobalImpact.OIP\PickCategorizedContentToConnectionImplementation.cs" />
     <Compile Include="AaltoGlobalImpact.OIP\UpdateConnectionThisSideCategoriesImplementation.cs" />
+    <Compile Include="TheBall.CORE\InitiateImportedGroupWithUnchangedIDImplementation.cs" />
     <Compile Include="TheBall.CORE\PackageOwnerContentImplementation.cs" />
     <Compile Include="TheBall.CORE\ExportOwnerContentToZipImplementation.cs" />
     <Compile Include="Partials\EmbeddedContentCollection.cs" />
@@ -309,6 +310,7 @@
     <Compile Include="TheBall.Interface\InformationChangeItem.cs" />
     <Compile Include="TheBall.Interface\InitiateIntegrationConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\PushCollaborationContentImplementation.cs" />
+    <Compile Include="TheBall.Interface\SetCategoryLinkingForConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\StatusSummary.cs" />
     <Compile Include="TheBall.Interface\UpdateConnectionOtherSideCategoriesImplementation.cs" />
     <Compile Include="TheBall.Interface\UpdateStatusSummaryImplementation.cs" />
