Completed (untested) device operation calls to support remote device removal when the active party is removed

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Partials\BinaryFile.cs" />
     <Compile Include="Partials\BinaryFileCollection.cs" />
     <Compile Include="Partials\ImageCollection.cs" />
+    <Compile Include="TheBall.CORE\RemoteDeviceCoreOperationImplementation.cs" />
     <Compile Include="TheBall.CORE\RequestProcessExecutionImplementation.cs" />
     <Compile Include="TheBall.CORE\SemanticInformationItem.cs" />
     <Compile Include="TheBall.CORE\UpdateUsageMonitoringSummariesImplementation.cs" />
