Implemented category sync through device interface - working v1.0

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -314,6 +314,7 @@
     <Compile Include="TheBall.Infrastructure\MountCloudDriveImplementation.cs" />
     <Compile Include="TheBall.Infrastructure\SplittingStream.cs" />
     <Compile Include="TheBall.Interface\Category.cs" />
+    <Compile Include="TheBall.Interface\CategoryInfo.cs" />
     <Compile Include="TheBall.Interface\Connection.cs" />
     <Compile Include="TheBall.Interface\ConnectionCollection.cs" />
     <Compile Include="TheBall.Interface\CreateConnectionStructuresImplementation.cs" />
@@ -328,7 +329,7 @@
     <Compile Include="TheBall.Interface\PushCollaborationContentImplementation.cs" />
     <Compile Include="TheBall.Interface\SetCategoryLinkingForConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\StatusSummary.cs" />
-    <Compile Include="TheBall.Interface\UpdateConnectionOtherSideCategoriesImplementation.cs" />
+    <Compile Include="TheBall.Interface\SynchronizeConnectionCategoriesImplementation.cs" />
     <Compile Include="TheBall.Interface\UpdateStatusSummaryImplementation.cs" />
     <Compile Include="WebSupport.cs" />
     <Compile Include="WorkerSupport.cs" />
