Processing connection received data - fixed device and category-mapping implementations. Last part TODO: copy actual content while migrating categories (same thing as for AGI website)

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -133,6 +133,7 @@
     <Compile Include="AaltoGlobalImpact.OIP\ListConnectionPackageContentsImplementation.cs" />
     <Compile Include="AaltoGlobalImpact.OIP\MigrateActivitiesAndBlogsToTextContentsImplementation.cs" />
     <Compile Include="AaltoGlobalImpact.OIP\PickCategorizedContentToConnectionImplementation.cs" />
+    <Compile Include="AaltoGlobalImpact.OIP\ProcessConnectionReceivedDataImplementation.cs" />
     <Compile Include="AaltoGlobalImpact.OIP\UpdateConnectionThisSideCategoriesImplementation.cs" />
     <Compile Include="InformationObjectSupport.cs" />
     <Compile Include="OperationSupport.cs" />
