Separated SetObjectTreeValues from http submission to be operation of its own

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -159,6 +159,7 @@
     <Compile Include="TheBall.CORE\RemoteDeviceCoreOperationImplementation.cs" />
     <Compile Include="TheBall.CORE\RequestProcessExecutionImplementation.cs" />
     <Compile Include="TheBall.CORE\SemanticInformationItem.cs" />
+    <Compile Include="TheBall.CORE\SetObjectTreeValuesImplementation.cs" />
     <Compile Include="TheBall.CORE\SyncCopyContentToDeviceTargetImplementation.cs" />
     <Compile Include="TheBall.CORE\UpdateUsageMonitoringSummariesImplementation.cs" />
     <Compile Include="TheBall.CORE\UpdateUsageMonitoringItemsImplementation.cs" />
