Added ContentSyncTool - works with ws/http on Mono already, still cert management to fix for SSL on mono.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
   <repository path="..\Apps\LuceneSupport\packages.config" />
   <repository path="..\Apps\WebInterface\packages.config" />
+  <repository path="..\Tools\ContentSyncTool\packages.config" />
 </repositories>
