Compiled devicesupport refactored to ContentSynctool

--- a/Tools/ContentSyncTool/packages.config
+++ b/Tools/ContentSyncTool/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net35" />
+  <package id="JsonFx" version="2.0.1209.2802" targetFramework="net35" />
   <package id="WebSocketSharp" version="1.0.3-rc3" targetFramework="net35" />
 </packages>
