--- a/Tools/ContentSyncTool/ContentSyncTool.csproj
+++ b/Tools/ContentSyncTool/ContentSyncTool.csproj
@@ -37,6 +37,9 @@
     <Reference Include="CommandLine">
       <HintPath>..\..\packages\CommandLineParser.1.9.71\lib\net35\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="JsonFx">
+      <HintPath>..\..\packages\JsonFx.2.0.1209.2802\lib\net35\JsonFx.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Security">
@@ -52,7 +55,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeviceSupport.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="INegotiationProtocolMember.cs" />
+    <Compile Include="JSONSupport.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
