--- a/Tools/ContentSyncTool/ContentSyncTool.csproj
+++ b/Tools/ContentSyncTool/ContentSyncTool.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security">
       <Private>False</Private>
     </Reference>
@@ -55,6 +56,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore_interface.designer.cs">
+      <Link>TheBall.CORE\TheBallCore_interface.designer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallInterface_interface.designer.cs">
+      <Link>TheBall.Interface\TheBallInterface_interface.designer.cs</Link>
+    </Compile>
+    <Compile Include="CommandImplementation.cs" />
     <Compile Include="DeviceSupport.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="INegotiationProtocolMember.cs" />
