--- a/Tools/ContentSyncTool/ContentSyncTool.csproj
+++ b/Tools/ContentSyncTool/ContentSyncTool.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CommandImplementation.cs" />
     <Compile Include="DeviceSupport.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="FileSystemSupport.cs" />
     <Compile Include="INegotiationProtocolMember.cs" />
     <Compile Include="JSONSupport.cs" />
     <Compile Include="Options.cs" />
