Download sync with MD5 comparison implemented (not parallelized)

--- a/Tools/ContentSyncTool/ContentSyncTool.csproj
+++ b/Tools/ContentSyncTool/ContentSyncTool.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ProtectionSupport.cs" />
     <Compile Include="SecurityNegotiationManager.cs" />
     <Compile Include="SymmetricSupport.cs" />
+    <Compile Include="SyncSupport.cs" />
     <Compile Include="TheBallEKE.cs" />
     <Compile Include="UserSettings.cs" />
   </ItemGroup>
