--- a/Apps/WebInterface/InstanceSettings_CaloomTest.config
+++ b/Apps/WebInterface/InstanceSettings_CaloomTest.config
@@ -8,6 +8,7 @@
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
   <add key="WorkerActiveContainerName" value="test-caloom-com" />
+  <add key="ContainerRedirects" value="test-theball-me:test-caloom-com"/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinSubjectFormat" value="Approve device connection to owner: {0}"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
@@ -23,6 +24,21 @@ Use the following link to complete your registration (the link is valid for 30 m
 {1}
 
 Wishing you all the best from Caloom team!"/>
+
+  <add key="EmailAccountMergeValidationSubjectFormat" value="Account MERGE on TheBall on DEVELOPMENT TESTING!"/>
+  <add key="EmailAccountMergeValidationMessageFormat" value="Account MERGE on TheBall on DEVELOPMENT TESTING!
+
+Your email address '{0}' is been requested for ACCOUNT MERGE! Please follow the link below ONLY IF YOU intend to do account merge!
+
+Use the following link to complete the account merge (the link is valid for 5 minutes after which you need to re-request the merge):
+{1}
+
+Wishing you all the best from The Ball team!"/>
+
+  <!--
+  EmailAccountMergeValidationSubjectFormat
+  EmailAccountMergeValidationMessageFormat
+  -->
   <add key="EmailInputJoinSubjectFormat" value="Approve input joining to owner: {0}"/>
   <add key="EmailInputJoinMessageFormat" value="Your confirmation is required to allow the following information source '{0}' to be fetched within {1} ID {2}. 
 
